--- a/Greedy/최소곱_배열곱셈.md
+++ b/Greedy/최소곱_배열곱셈.md
@@ -25,7 +25,20 @@ def solution(A,B):
     return sum(a * b for a, b in zip(A, B))
 ```
 
-## 비슷한 문제
+# 시간 복잡도 
+1. A.sort() 1이 될 때까지 나눔
+-> O(n log n) 
 
-● 백준 -동전 0 (그리디)
+2. B.sort(reverse = True) n이 커질수록 log n도 천천히 증가
+-> O(n log n)
+
+3. sum(a * b for a, b in zip(A, B)) zip 순회 + 곱셉 + 합산
+-> O(n)
+
+=> 총 O(n log n)
+
+# 공간 복잡도
+1. 제자리 정렬
+
+=> 총 O(1)
 
